--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,42 @@
 }
 
 /* shared styles */
+.display-flex{
+    display: flex;
+}
+/* dark 02 */
+.text-gray{
+    color: #424242;
+}
+
+/* dark 03 */
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+background-color: #FF900E;
+color: white;
+padding: 20px 25px;
+font-size: 1.25rem;
+font-weight: 600;
+border-style: none;
+border-radius: 8px;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.section-title{
+    font-size: 3rem;
+    font-weight: bold;
+}
+
 
 /* shared styles ends */
 
@@ -17,17 +53,110 @@
 /* header start */
 
 /* nav starts */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-items{
+    list-style: none;
+    margin-right: 30px;
+    
+    
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.brand{
+    font-weight: bold;
+    font-size: 3rem;
+}
+
 /* nav ends */
 
 /* banner starts */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-image{
+    width: 100%;
+}
 /* banner ends */
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
 /* header ends */
 
 
 
 /* main starts */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* team and features styles */
+.teams{
+align-items: center;
+}
+.team-image-container{
+    display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+/* team and features styles ends */
+
+/* feature will enjoy start */
+/* some facts start */
+
+/* some facts end */
+/* feature will enjoy ends */
+
 /* main ends */
 
 /* footer starts */
 /* footer ends */
+
+
+/* responsive media query */
+
+@media screen and (max-width: 576px) {
+    .navbar, 
+    .nav-links,
+    .teams {
+        flex-direction: column;
+    }
+
+    .team-image-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
+}
+
+/* medium device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+    flex-direction: column;
+    }
+     .our-features{
+        margin: 50px auto;
+        
+    }
+}
