--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-
-.work-sans-font{
+.work-sans-font {
   font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -9,154 +8,229 @@
 }
 
 /* shared styles */
-.display-flex{
-    display: flex;
+.display-flex {
+  display: flex;
 }
 /* dark 02 */
-.text-gray{
-    color: #424242;
+.text-gray {
+  color: #424242;
 }
 
 /* dark 03 */
-.text-light-gray{
-    color: #727272;
+.text-light-gray {
+  color: #727272;
 }
 
-.bg-light{
-    background-color: rgba(255, 144, 14, 0.1);
+.bg-light {
+  background-color: rgba(255, 144, 14, 0.1);
 }
 
-.btn-primary{
-background-color: #FF900E;
-color: white;
-padding: 20px 25px;
-font-size: 1.25rem;
-font-weight: 600;
-border-style: none;
-border-radius: 8px;
+.btn-primary {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-style: none;
+  border-radius: 8px;
 }
 
-main > section{
-    margin-top: 130px;
+main > section {
+  margin-top: 130px;
 }
 
-.section-title{
-    font-size: 3rem;
-    font-weight: bold;
+.section-title {
+  font-size: 3rem;
+  font-weight: bold;
 }
-
 
 /* shared styles ends */
-
-
 
 /* header start */
 
 /* nav starts */
-.navbar{
-    justify-content: space-between;
-    align-items: center;
+.navbar {
+  justify-content: space-between;
+  align-items: center;
 }
-.nav-items{
-    list-style: none;
-    margin-right: 30px;
-    
-    
+.nav-items {
+  list-style: none;
+  margin-right: 30px;
 }
-.nav-link{
-    text-decoration: none;
-    font-weight: 500;
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
 }
 
-.brand{
-    font-weight: bold;
-    font-size: 3rem;
+.brand {
+  font-weight: bold;
+  font-size: 3rem;
 }
 
 /* nav ends */
 
 /* banner starts */
-.banner-content{
-    max-width: 850px;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 50px;
+.banner-content {
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.banner-title{
-    font-weight: 700;
-    font-size: 4rem;
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
 }
-.banner-image{
-    width: 100%;
+.banner-image {
+  width: 100%;
 }
 /* banner ends */
 
-.navbar, .banner{
-    max-width: 1440px;
-    margin: 0 auto;
+.navbar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 /* header ends */
 
-
-
 /* main starts */
-main{
-    max-width: 1440px;
-    margin: 0 auto;
+main {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 /* team and features styles */
-.teams{
-align-items: center;
+.teams {
+  align-items: center;
 }
-.team-image-container{
-    display: grid;
-grid-template-columns: repeat(2, 1fr);
-gap: 24px;
+.team-image-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
 }
-.our-features{
-    margin-left: 130px;
-    max-width: 530px;
+.our-features {
+  margin-left: 130px;
+  max-width: 530px;
 }
 /* team and features styles ends */
 
 /* feature will enjoy start */
-/* some facts start */
 
-/* some facts end */
+.Features{
+    display: flex;
+    gap: 140px;
+    
+}
+#feature-section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.feature-card .feature-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+ 
+}
+
+.feature-card {
+     padding: 30px;
+     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+     margin-bottom: 20px;
+     border-radius: 8px;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -77px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.feature-architect{
+    width: 100%;
+}
 /* feature will enjoy ends */
 
+/* some facts start */
+
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact {
+  border: 1px solid #ff900e;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.fact-number {
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.fact-name {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.fact-description {
+  max-width: 540px;
+}
+/* some facts end */
+
+/* kothin section start */
+/* kothin section end */
 /* main ends */
 
 /* footer starts */
 /* footer ends */
 
-
 /* responsive media query */
 
 @media screen and (max-width: 576px) {
-    .navbar, 
-    .nav-links,
-    .teams {
-        flex-direction: column;
-    }
+  .navbar,
+  .nav-links,
+  .teams,
+  .Features {
+    flex-direction: column;
+  }
 
-    .team-image-container{
-        grid-template-columns: repeat(1, 1fr);
-    }
+  .team-image-container,
+  .facts-container {
+    grid-template-columns: 1fr;
+  }
 
-    .our-features{
-        margin-left: 20px;
-    }
+  .facts-container {
+    justify-items: center;
+    gap: 24px;
+  }
+  .our-features {
+    margin-left: 20px;
+  }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 /* medium device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+  .teams {
     flex-direction: column;
-    }
-     .our-features{
-        margin: 50px auto;
-        
-    }
+  }
+  .our-features {
+    margin: 50px auto;
+  }
 }
